# scp-engine

./: .gitignore  CMakeLists.txt  README.MD  README.md
cmake/: FindGLFW.cmake
cmake/modules/: FindGLFW.cmake
docs/: index.html
engine/: CMakeLists.txt
engine/include/scp/: CMakeLists.txt  event-dispatcher.hpp  event-type.hpp  event.hpp  fatal-error.hpp  game-launcher.hpp  input.hpp  key.hpp  launch-configuration.hpp  layer-stack.hpp  layer.hpp  mouse-button.hpp  scene.hpp  scp.hpp  window.hpp
engine/include/scp/events/: CMakeLists.txt  key.hpp  mouse.hpp
engine/include/scp/graphics/: CMakeLists.txt  api.hpp
engine/src/: CMakeLists.txt  dummy-layer.hpp  engine.cpp  engine.hpp  game-launcher.cpp  input-layer.cpp  input-layer.hpp  input.cpp  layer-stack.cpp  pch.hpp  scene-layer.cpp  scene-layer.hpp  scene.cpp  window.cpp
engine/src/platform/: CMakeLists.txt
engine/src/platform/linux/: CMakeLists.txt  x11-keymap.cpp  x11-keymap.hpp  x11-opengl-context.hpp  x11-window.cpp  x11-window.hpp
engine/src/platform/windows/: CMakeLists.txt  window.cpp  window.hpp
include/: CMakeLists.txt
include/SCP/: AppLauncher.hpp  Application.hpp  CMakeLists.txt  EngineStates.hpp  EventQueue.hpp  Layer.hpp  Scene.hpp  Window.hpp  pch.hpp
include/SCP/Events/: CMakeLists.txt  Event.hpp  KeyEvent.hpp  MouseClickEvent.hpp  MousePosEvent.hpp
include/SCP/Graphics/: API.hpp  CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  dummy.cpp
src/SCPEngine/: CMakeLists.txt  EventQueue.cpp  Window.cpp
src/sandbox/: CMakeLists.txt  TestScene.cpp  TestScene.hpp  sandbox.cpp
src/scp-engine/: CMakeLists.txt  EngineStates.cpp  Scene.cpp  dummy-source.cpp
